add created timestamp for counter
Signed-off-by: Artur Kugal <artur.kugal@swirldslabs.com>