@@ -4,10 +4,9 @@ package org.hiero.metrics.api;
 import static java.util.Objects.requireNonNull;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
-import org.hiero.metrics.api.core.Callback;
+import org.hiero.metrics.api.core.MetricCallback;
 import org.hiero.metrics.api.core.DataPointSnapshot;
 import org.hiero.metrics.api.core.Metric;
 import org.hiero.metrics.api.core.PrimitiveDataType;
@@ -15,7 +14,7 @@ import org.hiero.metrics.api.core.PrimitiveDataType;
 public final class CallbackMetric<T> extends Metric {
 
     private final PrimitiveDataType dataType;
-    private final Consumer<Callback<T>> callback;
+    private final Consumer<MetricCallback<T>> callback;
 
     private CallbackMetric(Builder<T> builder) {
         super(builder);
@@ -34,17 +33,23 @@ public final class CallbackMetric<T> extends Metric {
     public List<DataPointSnapshot> snapshot() {
         List<DataPointSnapshot> dataPoints = new ArrayList<>();
         callback.accept(
-                (value, labelValues) -> dataPoints.add(createSnapshot(value, dataType, Arrays.asList(labelValues))));
+                (value, labelValues) -> dataPoints.add(createSnapshot(value, dataType, List.of(labelValues))));
         return dataPoints;
     }
 
     public static class Builder<T> extends Metric.Builder<Builder<T>, CallbackMetric<T>> {
 
-        private Consumer<Callback<T>> callback;
+        private Consumer<MetricCallback<T>> callback;
         private Class<T> type;
 
         public Builder(String name) {
             super(name);
+        }
+
+        public Builder<T> withCallback(Class<T> type, Consumer<MetricCallback<T>> callback) {
+            this.type = type;
+            this.callback = callback;
+            return this;
         }
 
         @Override
@@ -54,12 +59,6 @@ public final class CallbackMetric<T> extends Metric {
 
         @Override
         protected Builder<T> self() {
-            return this;
-        }
-
-        public Builder<T> withCallback(Class<T> type, Consumer<Callback<T>> callback) {
-            this.type = type;
-            this.callback = callback;
             return this;
         }
     }
